[gd_scene load_steps=20 format=3 uid="uid://cmp0f4064a264"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_urfjx"]
[ext_resource type="Script" path="res://Scripts/animation_controller.gd" id="3_hf18r"]
[ext_resource type="Shape2D" uid="uid://dmfwm70i2xkjt" path="res://Resources/Player/player_collision_shape.tres" id="4_0cbvg"]
[ext_resource type="Script" path="res://Scripts/health_system.gd" id="4_qk3vs"]
[ext_resource type="Script" path="res://Scripts/hunger_bar.gd" id="6_8lhaw"]
[ext_resource type="SpriteFrames" uid="uid://dj4e31jkbac81" path="res://Resources/Player/player_sprite_frames.tres" id="6_kv8ls"]
[ext_resource type="PackedScene" uid="uid://dcl7imohtnsbj" path="res://Scenes/UI/inventrory_ui.tscn" id="7_64pfr"]
[ext_resource type="Script" path="res://Scripts/inventory.gd" id="8_3l3ao"]
[ext_resource type="PackedScene" uid="uid://btfhto224r8q8" path="res://Scenes/UI/on_screen_ui.tscn" id="9_qc5g0"]
[ext_resource type="Texture2D" uid="uid://rpgve2lagmcp" path="res://Assets/sprites/UI/healthbarUnder.png" id="14_y2xsh"]
[ext_resource type="Script" path="res://Scripts/hunger_system.gd" id="15_i0qm6"]
[ext_resource type="Texture2D" uid="uid://b8dflqexqcp7k" path="res://Assets/sprites/UI/healthbarProgress.png" id="15_wkeua"]
[ext_resource type="Script" path="res://Scripts/UI/health_bar.gd" id="16_oqtiy"]
[ext_resource type="Script" path="res://Scripts/Inventory/inventory_item.gd" id="17_icrkd"]
[ext_resource type="Resource" uid="uid://w4h143kvm1wj" path="res://Resources/Weapons/Pickaxe/pickaxe_inventory_item.tres" id="18_bxp3x"]
[ext_resource type="Resource" uid="uid://ch3olqyfjard4" path="res://Resources/Weapons/Sword/sword_inventory_item.tres" id="19_s54lb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k8vsp"]
texture = ExtResource("14_y2xsh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t6uvu"]
texture = ExtResource("15_wkeua")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y65ix"]
radius = 13.0
height = 28.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_urfjx")

[node name="OnScreenUI" parent="." instance=ExtResource("9_qc5g0")]

[node name="MarginContainer2" type="MarginContainer" parent="OnScreenUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -379.0
offset_bottom = 125.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="OnScreenUI/MarginContainer2"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="OnScreenUI/MarginContainer2/VBoxContainer"]
z_index = 100
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxTexture_k8vsp")
theme_override_styles/fill = SubResource("StyleBoxTexture_t6uvu")
value = 50.0
script = ExtResource("16_oqtiy")

[node name="HungerBar" type="ProgressBar" parent="OnScreenUI/MarginContainer2/VBoxContainer"]
z_index = 100
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxTexture_k8vsp")
theme_override_styles/fill = SubResource("StyleBoxTexture_t6uvu")
value = 50.0
script = ExtResource("6_8lhaw")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -10)
sprite_frames = ExtResource("6_kv8ls")
animation = &"attack_top"
autoplay = "idle_down"
flip_h = true
script = ExtResource("3_hf18r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
visibility_layer = 1023
position = Vector2(2, 0)
shape = ExtResource("4_0cbvg")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1.84, 6.48)
collision_layer = 0
collision_mask = 36

[node name="AttakCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.84, -24.48)
shape = SubResource("CapsuleShape2D_y65ix")
disabled = true
debug_color = Color(0.984314, 0.0823529, 0.235294, 0.611765)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -11)
zoom = Vector2(3, 3)

[node name="HealthSystem" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_qk3vs")

[node name="AreaPickUp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="ItemCollision" type="CollisionShape2D" parent="AreaPickUp"]
position = Vector2(2, 0)
shape = ExtResource("4_0cbvg")

[node name="InventroryUI" parent="." instance=ExtResource("7_64pfr")]
visible = false

[node name="Inventory" type="Node" parent="."]
process_mode = 3
script = ExtResource("8_3l3ao")
items = Array[ExtResource("17_icrkd")]([ExtResource("18_bxp3x"), ExtResource("19_s54lb")])

[node name="HungerSystem" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("15_i0qm6")

[node name="Timer" type="Timer" parent="HungerSystem"]
autostart = true

[connection signal="animation_finished" from="Sprite2D" to="Sprite2D" method="_on_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="AreaPickUp" to="." method="_on_area_pick_up_area_entered"]
[connection signal="timeout" from="HungerSystem/Timer" to="HungerSystem" method="_on_timer_timeout"]
